Convert parser to typescript

--- a/sfpopos-parser/Makefile
+++ b/sfpopos-parser/Makefile
@@ -1,5 +1,12 @@
+.PHONY: clean lint lint-fix
 clean:
 	rm -f popos.json
 
+lint:
+	./node_modules/.bin/tslint src/**/*
+
+lint-fix:
+	./node_modules/.bin/tslint --fix src/**/*
+
 popos.json:
-	node src/index.js
+	node build/index.js
